<resources>

    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextView_login">Login</string>
    <string name="EditText_login">login name</string>
    <string name="TextView_password">password</string>
    <!--<string name="EditText_password" ></string>-->
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="Switch">What does this do?</string>
    <string name="buttonLogin">Login</string>
    <string name="switchOff">Switch is off</string>
    <string name="switchOn">Switch is on</string>
    <string name="checkboxAlert">Do you want to finish?</string>
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="lab4StartChatButton">Start Chat</string>
    <string name="lab4SendChatButton">send</string>
    <string name="lab5WeatherButton">View Weather</string>
    <string name="messageHere">MessageHere</string>
    <string name="idHere">ID = </string>
    <string name="deleteThisMessage">DELETE THIS MESSAGE</string>
    <string name="dialog">Enter message</string>
    <string name="start_toolbar">Toolbar</string>
    <string name="title_activity_test_toolbar">Test Toolbar</string>
    <string name="dialogTitle">Do you want to go back?</string>


</resources>
