<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.nikhil.androidlabs.StartActivity">

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <Button
        android:id="@+id/buttonHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"/>

    <Button
        android:id="@+id/StartChatbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab4StartChatButton" />

    <Button
        android:id="@+id/buttonWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab5WeatherButton" />

    <Button
        android:text="@string/start_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</LinearLayout>
