<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="2"
    android:columnCount="2"
    tools:rowCount="2"
    tools:columnCount="2"
    tools:context="com.example.nikhil.androidlabs.ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:text="@string/radiobutton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkbox"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/Switch" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>
